FRONT: fixed styles for light-dark modes

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,8 @@
   font-weight: 400;
 
   /* color-scheme: light dark; */
-  color-scheme: light;
+  color-scheme: var(--tg-color-scheme);
+  color: var(--tg-theme-text-color, #222);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -135,7 +136,7 @@ body {
         font-weight: 600;
       }
       .point-text {
-        color: rgba(0, 0, 0, 0.4);
+        color: var(--tg-theme-hint-color, rgba(0, 0, 0, 0.4));
       }
     }
     .channel {
@@ -172,7 +173,7 @@ body {
         }
         p.cost {
           font-size: 14px;
-          color: #a7a7a7;
+          color: var(--tg-theme-hint-color, #a7a7a7);
         }
       }
     }
@@ -180,6 +181,7 @@ body {
       margin: 10px 0 5px 0;
       border-radius: 20px;
       background-color: #0088cc;
+      color: white;
     }
   }
 }
@@ -207,22 +209,3 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
-/* @media (prefers-color-scheme: dark) {
-  .list.profile {
-    -webkit-box-shadow: 0px 0px 5px 0px rgba(255, 255, 255, 0.2) !important;
-    box-shadow: 0px 0px 5px 0px rgba(255, 255, 255, 0.2) !important;
-    .point-text {
-      color: rgba(255, 255, 255, 0.3) !important;
-    }
-  }
-  .list.prize {
-    .item.prize {
-      border: solid 1px rgba(255, 255, 255, 0.2) !important;
-      background-color: #f0f0f033;
-      button {
-        color: white;
-      }
-    }
-  }
-} */
